# AutoStorable

./: LICENSE  README.md  autostorable.cabal
src/Foreign/: AutoStorable.hs
src/Foreign/AutoStorable/: Types.hs  Utils.hs
test/: AutoStorableTests.hs
