name:                autostorable
version:             0.1.0.0
synopsis:            Generate Storable instances for simple data types.
description:         AutoStorable is a simple library that can provide
                     implementations for the functions required for making a
                     data type an instance of Storable.
license:             MIT
license-file:        LICENSE
author:              Steven Smith
maintainer:          guntir@teamclerks.net
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Foreign.AutoStorable
                     , Foreign.AutoStorable.Types
                     , Foreign.AutoStorable.Utils
  -- other-modules:       
  other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , mtl >=2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fllvm
